Add @modelcontextprotocol/sdk v1.15.1 and enhance route.ts with coding standards tools

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.15.1",
     "@vercel/mcp-adapter": "0.8.2",
     "next": "15.2.4",
     "react": "^19.1.0",
